[gd_scene load_steps=2 format=2]

[ext_resource path="res://ui/lobby/main_menu.gd" type="Script" id=1]

[node name="MainMenu" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -774.0
margin_bottom = -350.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 243.0
margin_bottom = 243.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 236.0
margin_bottom = 20.0

[node name="IPTextField" type="TextEdit" parent="VBoxContainer/HBoxContainer"]
margin_right = 90.0
margin_bottom = 20.0
rect_min_size = Vector2( 90, 20 )
text = "127.0.0.1"

[node name="JoinGameButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 94.0
margin_right = 174.0
margin_bottom = 20.0
rect_min_size = Vector2( 80, 20 )
text = "Join Game"

[node name="HostGameButton" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 236.0
margin_bottom = 44.0
text = "Host Game"

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 236.0
margin_bottom = 68.0
text = "Settings (not implemented)"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
margin_top = 72.0
margin_right = 236.0
margin_bottom = 92.0
text = "Exit"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/JoinGameButton" to="." method="_on_JoinGameButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HostGameButton" to="." method="_on_HostGameButton_pressed"]
[connection signal="pressed" from="VBoxContainer/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
